# franka_ros2_ws

./: README.md  model_check_simple.urdf
src/dual_fr3_config/: .setup_assistant  CMakeLists.txt  package.xml
src/dual_fr3_config/config/: dual_fr3_robot.ros2_control.xacro  dual_fr3_robot.srdf  dual_fr3_robot.urdf.xacro  initial_positions.yaml  moveit_controllers.yaml  ompl_planning.yaml  ros2_controllers.yaml
src/dual_fr3_config/launch/: demo.launch.py  move_group.launch.py  moveit_rviz.launch.py  rsp.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py  warehouse_db.launch.py
src/dual_fr3_description/: CMakeLists.txt  package.xml
src/dual_fr3_description/urdf/: dual_fr3.urdf.xacro  dual_fr3_robot.urdf  mr1000_macro.xacro  robot.urdf  robot.urdf.xacro
src/dualarm_motion_planning/: CMakeLists.txt  package.xml
src/dualarm_motion_planning/data/: blocking_experiment_results.csv  collision_matrix_blocking.txt  collision_matrix_replanning_r2.txt  trajectory_r2_replanning.txt
src/dualarm_motion_planning/include/: collision_detection.h  dualarm_coordinator.h  find_point_on_line.h  path_planner.h  path_tracking_planning.h
src/dualarm_motion_planning/launch/: coord_demo.launch.py
src/dualarm_motion_planning/msg/: ObjectGoal.msg  TaskAction.msg  TaskActionList.msg
src/dualarm_motion_planning/scripts/: task_pub.py  task_sequence.py
src/dualarm_motion_planning/src/: collision_detection.cpp  control.cpp  coord_node.cpp  dualarm_coordinator.cpp  find_point_on_line.cpp  path_planner.cpp  path_tracking_planning.cpp  task_distribution.cpp
src/dualarm_motion_planning/srv/: GiveGoal.srv  TrajPara.srv
